--- a/src/Map/Map.css
+++ b/src/Map/Map.css
@@ -5,3 +5,24 @@ directions-logo {
 img {
 	margin: .5em .5em;
 }
+
+body {
+	font-family:'Josefin Slab', serif;
+}
+
+#pac-input {
+	background-color: #fff;
+	font-family: Roboto;
+	font-size: 20px;
+	font-weight: 300;
+	margin-left: 12px;
+	padding: 0 11px 0 13px;
+	text-overflow: ellipsis;
+	width: 400px;
+	border: 2px solid rgb(156,202,255);
+	border-radius: 5px;
+}
+
+#pac-input:focus {
+	border-color: #4d90fe;
+}
